Created centered hero with profile image, and text. Applied CSS to hero section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Mattingly Portfolio</title>
+    <title>Michael Mattingly's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -16,15 +16,28 @@
         <nav>
             <ul class="header-links">
                 <li><a href="#">About Me</a></li>
-                <li><a href="#">Work</a></li>
+                <li><a href="#">Portfolio Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="hero" aria-label="Pink and blue gradient background">
+            <figure>
+                <img class="profile-img" src="./assets/images/michael.jpeg" alt="Photo of Michael Mattingly">
+            </figure>
+            <section class="hero-text">
+                <h2>Michael Mattingly</h2>
+                <p>Student at UCB Full Stack Web Development Bootcamp</p>
+            </section>
+        </section>
 
 
 
-    <h1>Hello World!</h1>
+
+
+
+    </main>
 </body>
 
 </html>
