Added card and card-containers classes, added id=about-me and added image, text, and css to about-me card.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+
+    <!-- Header section -->
     <header>
         <h1>Michael Mattingly</h1>
         <nav>
@@ -21,21 +23,38 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="hero" aria-label="Pink and blue gradient background">
-            <figure>
-                <img class="profile-img" src="./assets/images/michael.jpeg" alt="Photo of Michael Mattingly">
-            </figure>
-            <section class="hero-text">
-                <h2>Michael Mattingly</h2>
-                <p>Student at UCB Full Stack Web Development Bootcamp</p>
-            </section>
+
+    <!-- Hero section -->
+    <section class="hero" aria-label="Pink and blue gradient background.">
+        <figure>
+            <img class="profile-img" src="./assets/images/michael.jpeg" alt="Photo of Michael Mattingly.">
+        </figure>
+        <section class="hero-text">
+            <h2>Michael Mattingly</h2>
+            <p>Student at UCB Full Stack Web Development Bootcamp</p>
         </section>
+    </section>
 
+    <main>
 
-
-
-
+        <!-- About me section -->
+        <aside id="about me" class="card-container">
+            <article class="card">
+                <h3 class="about-me-title">About Me</h3>
+                <figure>
+                    <img class="about-me-img" src="./assets/images/coding.png" alt="Photo of code on a computer screen.">
+                </figure>
+                <p class="about-me-text">
+                    &emsp;I am a student at the University of California,
+                    Berkeley Full Stack Web Development Bootcamp. I am currently learning HTML, CSS, JavaScript,
+                    Node.js, Express.js, React.js, and MongoDB. I am also learning how to use Git and GitHub to manage
+                    version control and collaborate with other developers. I am excited to learn more about web development and
+                    to start my career as a web developer. Previously my experience in coding involved Python, Java and
+                    SQL aswell. Formerally I was employed as a robotics deployment engineer, and have experience with
+                    multiple different warehouse automation technologies.
+                </p>
+            </article>
+        </aside>
 
     </main>
 </body>
