Updated media queries to provide proper sizing for mobile devices

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <!-- Header section -->
     <header>
-        <h1>Michael Mattingly</h1>
+        <h1>Student Portfolio</h1>
         <nav>
             <ul class="header-links">
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Portfolio Projects</a></li>
+                <li><a href="#about-me">About</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -38,17 +38,19 @@
     <main>
 
         <!-- About me section -->
-        <aside id="about me" class="card-container">
+        <aside id="about-me" class="card-container">
             <article class="card">
                 <h3 class="about-me-title">About Me</h3>
                 <figure>
-                    <img class="about-me-img" src="./assets/images/coding.png" alt="Photo of code on a computer screen.">
+                    <img class="about-me-img" src="./assets/images/coding.png"
+                        alt="Photo of code on a computer screen.">
                 </figure>
                 <p class="about-me-text">
                     &emsp;I am a student at the University of California,
                     Berkeley Full Stack Web Development Bootcamp. I am currently learning HTML, CSS, JavaScript,
                     Node.js, Express.js, React.js, and MongoDB. I am also learning how to use Git and GitHub to manage
-                    version control and collaborate with other developers. I am excited to learn more about web development and
+                    version control and collaborate with other developers. I am excited to learn more about web
+                    development and
                     to start my career as a web developer. Previously my experience in coding involved Python, Java and
                     SQL aswell. Formerally I was employed as a robotics deployment engineer, and have experience with
                     multiple different warehouse automation technologies.
