Added contact info, created footer element, applied CSS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="header-links">
                 <li><a href="#about-me">About</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact-me">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -58,7 +58,32 @@
             </article>
         </aside>
 
+
     </main>
+    <footer id="contact-me">
+        <h3>Contact me:</h3>
+        <section class="icons-section">
+            <figure class="icon-container">
+                <a href="mailto:mikeamatt@hotmail.com:" target="_blank">
+                    <img class="footer-icon" src="./assets/images/envelope-fill.svg" alt="Envelope icon">
+                </a>
+                <figcaption>Email</figcaption>
+            </figure>
+
+            <figure class="icon-container">
+                <a href="https://github.com/MeanBean87" target="_blank">
+                    <img class="footer-icon" src="./assets/images/github.svg" alt="Github Icon">
+                </a>
+                <figcaption>Github</figcaption>
+            </figure>
+
+            <figure class="icon-container">
+                <a href="https://www.linkedin.com/in/michael-mattingly-5580b1280/" target="_blank">
+                    <img src="./assets/images/linkedin.svg" alt="LinkedIn Icon"></a>
+                <figcaption>LinkedIn</figcaption>
+            </figure>
+        </section>
+    </footer>
 </body>
 
 </html>
